<resources>
    <string name="app_name">KAKITU</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_register">SIGN UP</string>
    <string name="btn_get_code">GET SIGN IN CODE</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Sign in.</string>
    <string name="welcome">Welcome</string>
    <string name="success_title">Success!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">User Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_logout">SIGN OUT</string>
    <string name="hint_code">Enter verification code here</string>
    <string name="enter_code_prompt">A code has been sent to the phone number provided. Use it to sign in.</string>
    <string name="title_activity_new_main">NewMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
