<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:text="@string/enter_code_prompt"
            android:textSize="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_login_hint" />


        <EditText
            android:visibility="gone"
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_code"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_get_code"
            android:textColor="@color/white" />


        <Button
            android:visibility="gone"
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <ProgressBar
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="40"
            android:progressBackgroundTint="#ea4c88"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
